--- a/browser/BUILD.gn
+++ b/browser/BUILD.gn
@@ -44,6 +44,8 @@ source_set("browser_process") {
     "brave_content_browser_client.h",
     "brave_local_state_prefs.cc",
     "brave_local_state_prefs.h",
+    "brave_performance_observers.cc",
+    "brave_performance_observers.h",
     "brave_profile_prefs.cc",
     "brave_profile_prefs.h",
     "brave_stats_updater.cc",
@@ -129,6 +131,7 @@ source_set("browser_process") {
     "//brave/components/brave_referrals/browser",
     "//brave/components/brave_rewards/browser",
     "//brave/components/brave_shields/browser",
+    "//brave/components/brave_savings/browser",
     "//brave/components/brave_wallet/browser",
     "//brave/components/brave_webtorrent/browser/buildflags",
     "//brave/components/content_settings/core/browser",
