--- a/browser/BUILD.gn
+++ b/browser/BUILD.gn
@@ -1,6 +1,7 @@
 import("//brave/build/config.gni")
 import("//brave/browser/tor/buildflags/buildflags.gni")
 import("//brave/components/brave_ads/browser/buildflags/buildflags.gni")
+import("//brave/components/brave_savings/browser/buildflags/buildflags.gni")
 import("//brave/components/brave_sync/buildflags/buildflags.gni")
 import("//brave/components/brave_wallet/browser/buildflags/buildflags.gni")
 import("//brave/components/brave_webtorrent/browser/buildflags/buildflags.gni")
@@ -131,7 +132,6 @@ source_set("browser_process") {
     "//brave/components/brave_referrals/browser",
     "//brave/components/brave_rewards/browser",
     "//brave/components/brave_shields/browser",
-    "//brave/components/brave_savings/browser",
     "//brave/components/brave_wallet/browser",
     "//brave/components/brave_webtorrent/browser/buildflags",
     "//brave/components/content_settings/core/browser",
@@ -272,6 +272,12 @@ source_set("browser_process") {
       "brave_drm_tab_helper.h",
     ]
     deps += [ "//brave/browser/widevine" ]
+  }
+
+  if (brave_perf_predictor_enabled) {
+    deps += [
+      "//brave/components/brave_savings/browser",
+    ]
   }
 
   if (is_win && is_official_build) {
