--- a/android/java/AndroidManifest.xml
+++ b/android/java/AndroidManifest.xml
@@ -38,3 +38,11 @@
 <service android:name="org.chromium.chrome.browser.upgrade.BraveUpgradeJobIntentService"
     android:permission="android.permission.BIND_JOB_SERVICE"
     android:exported="false"/>
+
+<!-- For Google Play Store Campaign Measurement-->
+<receiver android:name="org.chromium.chrome.browser.util.BraveReferrer"
+    android:exported="true">
+    <intent-filter>
+        <action android:name="android.intent.action.PACKAGE_FIRST_LAUNCH"/>
+    </intent-filter>
+</receiver>
